--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "ie >= 10"
   ],
   "dependencies": {
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "12.1.4",
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.31",
-    "eslint": "<8.0.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.4"
+    "@types/node": "^17.0.23",
+    "@types/react": "17.0.43",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4",
+    "typescript": "4.5.5"
   }
 }
