--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ie >= 10"
   ],
   "dependencies": {
+    "clsx": "^1.1.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
@@ -21,8 +22,14 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/react": "17.0.43",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "eslint": "8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "12.1.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "typescript": "4.5.5"
   }
 }
