--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,42 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
-    "target": "es5",
+    "allowJs": true,
+    "alwaysStrict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "noEmit": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true
+    "skipLibCheck": true,
+    "strict": true,
+    "incremental": true,
+    "target": "esnext",
+    "typeRoots": [
+      "src/types"
+    ],
   },
-  "include": [
-    "next-env.d.ts",
-    "additional.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "include": [
+    "*.d.ts",
+    "*.js",
+    ".*.js",
+    "**/*.ts",
+    "**/*.tsx",
+    "next-plugins/**/*.js",
+    "**/.eslintrc.js",
+  ],
 }
