--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "clsx": "^1.1.1",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
