--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "lodash": "^4.17.21",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.199",
     "@types/node": "^18.16.1",
     "@types/react": "^18.2.28",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
