--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.199",
