--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "ie >= 10"
   ],
   "engines": {
-    "node": "^18"
+    "node": "^22"
   },
   "dependencies": {
     "clsx": "^2.0.0",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.199",
-    "@types/node": "^18.16.1",
+    "@types/node": "22.19.11",
     "@types/react": "^18.2.28",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
